deployments/kvstore.yml
apiVersion: apps/v1
kind: Deployment                 
metadata:
  name: kvstore     
spec:
  replicas: 3                    
  selector:
    matchLabels:
      app: kvstore        
  template:                      
    metadata:
      labels:                    
        app: kvstore
    spec:
      containers:
      - name: kvstore
        image: kvstore:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000    
---
apiVersion: v1
kind: Service                    
metadata:
  name: kvstore   
spec:               
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: kvstore
